[gd_scene load_steps=7 format=4 uid="uid://byefhs8t7rlgf"]

[ext_resource type="Script" uid="uid://dros6vwwk611h" path="res://Scripts/Words/map_vestibule.gd" id="1_l51ex"]
[ext_resource type="Texture2D" uid="uid://8su6aslfvug2" path="res://Assets/tile_set.png" id="2_xta5h"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xta5h"]
texture = ExtResource("2_xta5h")
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/terrains_peering_bit/bottom_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0/terrains_peering_bit/bottom_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/terrains_peering_bit/right_side = 0
2:0/0/terrains_peering_bit/bottom_right_corner = 0
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/bottom_left_corner = 0
2:0/0/terrains_peering_bit/left_side = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/terrains_peering_bit/bottom_side = 0
3:0/0/terrains_peering_bit/bottom_left_corner = 0
3:0/0/terrains_peering_bit/left_side = 0
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/terrain = 0
4:0/0/terrains_peering_bit/right_side = 0
4:0/0/terrains_peering_bit/bottom_side = 0
4:0/0/terrains_peering_bit/bottom_left_corner = 0
4:0/0/terrains_peering_bit/left_side = 0
4:0/0/terrains_peering_bit/top_left_corner = 0
4:0/0/terrains_peering_bit/top_side = 0
4:0/0/terrains_peering_bit/top_right_corner = 0
5:0/0 = 0
5:0/0/terrain_set = 0
5:0/0/terrain = 0
5:0/0/terrains_peering_bit/right_side = 0
5:0/0/terrains_peering_bit/bottom_right_corner = 0
5:0/0/terrains_peering_bit/bottom_side = 0
5:0/0/terrains_peering_bit/left_side = 0
5:0/0/terrains_peering_bit/top_left_corner = 0
5:0/0/terrains_peering_bit/top_side = 0
5:0/0/terrains_peering_bit/top_right_corner = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/top_side = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/top_side = 0
1:1/0/terrains_peering_bit/top_right_corner = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/terrains_peering_bit/right_side = 0
2:1/0/terrains_peering_bit/bottom_right_corner = 0
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_left_corner = 0
2:1/0/terrains_peering_bit/top_side = 0
2:1/0/terrains_peering_bit/top_right_corner = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/bottom_left_corner = 0
3:1/0/terrains_peering_bit/left_side = 0
3:1/0/terrains_peering_bit/top_left_corner = 0
3:1/0/terrains_peering_bit/top_side = 0
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/terrain = 0
4:1/0/terrains_peering_bit/right_side = 0
4:1/0/terrains_peering_bit/bottom_right_corner = 0
4:1/0/terrains_peering_bit/bottom_side = 0
4:1/0/terrains_peering_bit/bottom_left_corner = 0
4:1/0/terrains_peering_bit/left_side = 0
4:1/0/terrains_peering_bit/top_left_corner = 0
4:1/0/terrains_peering_bit/top_side = 0
5:1/0 = 0
5:1/0/terrain_set = 0
5:1/0/terrain = 0
5:1/0/terrains_peering_bit/right_side = 0
5:1/0/terrains_peering_bit/bottom_right_corner = 0
5:1/0/terrains_peering_bit/bottom_side = 0
5:1/0/terrains_peering_bit/bottom_left_corner = 0
5:1/0/terrains_peering_bit/left_side = 0
5:1/0/terrains_peering_bit/top_side = 0
5:1/0/terrains_peering_bit/top_right_corner = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/terrains_peering_bit/top_side = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/top_side = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/terrains_peering_bit/right_side = 0
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_left_corner = 0
2:2/0/terrains_peering_bit/top_side = 0
2:2/0/terrains_peering_bit/top_right_corner = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/terrains_peering_bit/left_side = 0
3:2/0/terrains_peering_bit/top_left_corner = 0
3:2/0/terrains_peering_bit/top_side = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/terrains_peering_bit/right_side = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/terrains_peering_bit/right_side = 0
2:3/0/terrains_peering_bit/left_side = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
3:3/0/terrains_peering_bit/left_side = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:3/0 = 0
5:3/0 = 0
6:0/0 = 0

[sub_resource type="TileSet" id="TileSet_7e3sg"]
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_xta5h")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l51ex"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vlrda"]
size = Vector2(64, 64)

[node name="MapVestibule" type="Node2D"]
script = ExtResource("1_l51ex")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(-6, 0)
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAAAAAAAAAAFAAMAAAAAAAEAAAAGAAAAAAAAAAIAAAAFAAMAAAAAAAMAAAAGAAAAAAAAAAQAAAAEAAIAAAAAAAUAAAAGAAAAAAAAAAYAAAAFAAMAAAAAAAcAAAAGAAAAAAAAAAgAAAAGAAAAAAAAAAkAAAAFAAIAAAAAAAoAAAAEAAMAAAAAAAsAAAAEAAIAAAAAAAwAAAAGAAAAAAAAAA0AAAAGAAAAAAAAAA4AAAAGAAAAAAAAAA8AAAAGAAAAAAAAABAAAAAGAAAAAAAAABEAAAAFAAIAAAAAABIAAAAEAAIAAAAAABMAAAAGAAAAAAAAABQAAAAGAAAAAAAAABUAAAAGAAAAAAABAAAAAAAEAAIAAAABAAEAAAAGAAAAAAABAAIAAAAGAAAAAAABAAMAAAAEAAMAAAABAAQAAAAGAAAAAAABAAUAAAAGAAAAAAABAAYAAAAGAAAAAAABAAcAAAAGAAAAAAABAAgAAAAGAAAAAAABAAkAAAAGAAAAAAABAAoAAAAFAAMAAAABAAsAAAAGAAAAAAABAAwAAAAGAAAAAAABAA0AAAAGAAAAAAABAA4AAAAGAAAAAAABAA8AAAAEAAIAAAABABAAAAAGAAAAAAABABEAAAAFAAMAAAABABIAAAAGAAAAAAABABMAAAAGAAAAAAABABQAAAAGAAAAAAABABUAAAAGAAAAAAACAAAAAAAGAAAAAAACAAEAAAAFAAMAAAACAAIAAAAGAAAAAAACAAMAAAAGAAAAAAACAAQAAAAGAAAAAAACAAUAAAAGAAAAAAACAAYAAAAGAAAAAAACAAcAAAAEAAIAAAACAAgAAAAGAAAAAAACAAkAAAAGAAAAAAACAAoAAAAGAAAAAAACAAsAAAAGAAAAAAACAAwAAAAEAAIAAAACAA0AAAAGAAAAAAACAA4AAAAGAAAAAAACAA8AAAAGAAAAAAACABAAAAAGAAAAAAACABEAAAAEAAIAAAACABIAAAAGAAAAAAACABMAAAAGAAAAAAACABQAAAAGAAAAAAACABUAAAAFAAMAAAADAAAAAAAFAAMAAAADAAEAAAAGAAAAAAADAAIAAAAGAAAAAAADAAMAAAAEAAIAAAADAAQAAAAGAAAAAAADAAUAAAAGAAAAAAADAAYAAAAGAAAAAAADAAcAAAAGAAAAAAADAAgAAAAGAAAAAAADAAkAAAAGAAAAAAADAAoAAAAFAAMAAAADAAsAAAAGAAAAAAADAAwAAAAGAAAAAAADAA0AAAAGAAAAAAADAA4AAAAGAAAAAAADAA8AAAAGAAAAAAADABAAAAAGAAAAAAADABEAAAAGAAAAAAADABIAAAAFAAIAAAADABMAAAAGAAAAAAADABQAAAAGAAAAAAADABUAAAAGAAAAAAAEAAAAAAAEAAIAAAAEAAEAAAAGAAAAAAAEAAIAAAAGAAAAAAAEAAMAAAAGAAAAAAAEAAQAAAAGAAAAAAAEAAUAAAAFAAIAAAAEAAYAAAAGAAAAAAAEAAcAAAAFAAMAAAAEAAgAAAAEAAIAAAAEAAkAAAAGAAAAAAAEAAoAAAAGAAAAAAAEAAsAAAAGAAAAAAAEAAwAAAAGAAAAAAAEAA0AAAAGAAAAAAAEAA4AAAAGAAAAAAAEAA8AAAAGAAAAAAAEABAAAAAGAAAAAAAEABEAAAAFAAMAAAAEABIAAAAGAAAAAAAEABMAAAAFAAMAAAAEABQAAAAFAAIAAAAEABUAAAAGAAAAAAAFAAAAAAAGAAAAAAAFAAEAAAAGAAAAAAAFAAIAAAAGAAAAAAAFAAMAAAAGAAAAAAAFAAQAAAAGAAAAAAAFAAUAAAAGAAAAAAAFAAYAAAAFAAIAAAAFAAcAAAAGAAAAAAAFAAgAAAAGAAAAAAAFAAkAAAAGAAAAAAAFAAoAAAAGAAAAAAAFAAsAAAAGAAAAAAAFAAwAAAAGAAAAAAAFAA0AAAAGAAAAAAAFAA4AAAAEAAMAAAAFAA8AAAAFAAIAAAAFABAAAAAGAAAAAAAFABEAAAAGAAAAAAAFABIAAAAGAAAAAAAFABMAAAAEAAIAAAAFABQAAAAGAAAAAAAFABUAAAAGAAAAAAAGAAAAAAAGAAAAAAAGAAEAAAAEAAIAAAAGAAIAAAAGAAAAAAAGAAMAAAAGAAAAAAAGAAQAAAAGAAAAAAAGAAUAAAAGAAAAAAAGAAYAAAAEAAIAAAAGAAcAAAAGAAAAAAAGAAgAAAAGAAAAAAAGAAkAAAAGAAAAAAAGAAoAAAAGAAAAAAAGAAsAAAAEAAIAAAAGAAwAAAAGAAAAAAAGAA0AAAAGAAAAAAAGAA4AAAAGAAAAAAAGAA8AAAAGAAAAAAAGABAAAAAGAAAAAAAGABEAAAAGAAAAAAAGABIAAAAEAAMAAAAGABMAAAAGAAAAAAAGABQAAAAGAAAAAAAGABUAAAAGAAAAAAAHAAAAAAAGAAAAAAAHAAEAAAAGAAAAAAAHAAIAAAAGAAAAAAAHAAMAAAAGAAAAAAAHAAQAAAAGAAAAAAAHAAUAAAAGAAAAAAAHAAYAAAAFAAIAAAAHAAcAAAAGAAAAAAAHAAgAAAAGAAAAAAAHAAkAAAAGAAAAAAAHAAoAAAAEAAIAAAAHAAsAAAAGAAAAAAAHAAwAAAAGAAAAAAAHAA0AAAAGAAAAAAAHAA4AAAAGAAAAAAAHAA8AAAAGAAAAAAAHABAAAAAGAAAAAAAHABEAAAAGAAAAAAAHABIAAAAGAAAAAAAHABMAAAAGAAAAAAAHABQAAAAGAAAAAAAHABUAAAAFAAIAAAAIAAAAAAAGAAAAAAAIAAEAAAAFAAMAAAAIAAIAAAAGAAAAAAAIAAMAAAAGAAAAAAAIAAQAAAAGAAAAAAAIAAUAAAAGAAAAAAAIAAYAAAAGAAAAAAAIAAcAAAAGAAAAAAAIAAgAAAAGAAAAAAAIAAkAAAAGAAAAAAAIAAoAAAAEAAIAAAAIAAsAAAAGAAAAAAAIAAwAAAAGAAAAAAAIAA0AAAAFAAIAAAAIAA4AAAAEAAIAAAAIAA8AAAAGAAAAAAAIABAAAAAGAAAAAAAIABEAAAAGAAAAAAAIABIAAAAEAAMAAAAIABMAAAAEAAIAAAAIABQAAAAFAAMAAAAIABUAAAAGAAAAAAAJAAAAAAAGAAAAAAAJAAEAAAAGAAAAAAAJAAIAAAAFAAMAAAAJAAMAAAAFAAMAAAAJAAQAAAAGAAAAAAAJAAUAAAAGAAAAAAAJAAYAAAAGAAAAAAAJAAcAAAAGAAAAAAAJAAgAAAAGAAAAAAAJAAkAAAAGAAAAAAAJAAoAAAAGAAAAAAAJAAsAAAAGAAAAAAAJAAwAAAAGAAAAAAAJAA0AAAAGAAAAAAAJAA4AAAAGAAAAAAAJAA8AAAAGAAAAAAAJABAAAAAGAAAAAAAJABEAAAAGAAAAAAAJABIAAAAGAAAAAAAJABMAAAAGAAAAAAAJABQAAAAGAAAAAAAJABUAAAAGAAAAAAAKAAAAAAAFAAIAAAAKAAEAAAAGAAAAAAAKAAIAAAAEAAIAAAAKAAMAAAAEAAMAAAAKAAQAAAAGAAAAAAAKAAUAAAAGAAAAAAAKAAYAAAAGAAAAAAAKAAcAAAAGAAAAAAAKAAgAAAAFAAIAAAAKAAkAAAAGAAAAAAAKAAoAAAAGAAAAAAAKAAsAAAAGAAAAAAAKAAwAAAAGAAAAAAAKAA0AAAAGAAAAAAAKAA4AAAAEAAMAAAAKAA8AAAAEAAIAAAAKABAAAAAGAAAAAAAKABEAAAAGAAAAAAAKABIAAAAGAAAAAAAKABMAAAAGAAAAAAAKABQAAAAGAAAAAAAKABUAAAAEAAMAAAALAAAAAAAGAAAAAAALAAEAAAAFAAIAAAALAAIAAAAEAAMAAAALAAMAAAAGAAAAAAALAAQAAAAEAAIAAAALAAUAAAAGAAAAAAALAAYAAAAGAAAAAAALAAcAAAAGAAAAAAALAAgAAAAFAAMAAAALAAkAAAAFAAIAAAALAAoAAAAGAAAAAAALAAsAAAAGAAAAAAALAAwAAAAFAAMAAAALAA0AAAAGAAAAAAALAA4AAAAGAAAAAAALAA8AAAAEAAIAAAALABAAAAAGAAAAAAALABEAAAAGAAAAAAALABIAAAAGAAAAAAALABMAAAAFAAIAAAALABQAAAAGAAAAAAALABUAAAAGAAAAAAAMAAAAAAAEAAMAAAAMAAEAAAAEAAIAAAAMAAIAAAAGAAAAAAAMAAMAAAAEAAMAAAAMAAQAAAAEAAIAAAAMAAUAAAAGAAAAAAAMAAYAAAAGAAAAAAAMAAcAAAAGAAAAAAAMAAgAAAAGAAAAAAAMAAkAAAAGAAAAAAAMAAoAAAAGAAAAAAAMAAsAAAAGAAAAAAAMAAwAAAAGAAAAAAAMAA0AAAAGAAAAAAAMAA4AAAAGAAAAAAAMAA8AAAAGAAAAAAAMABAAAAAFAAIAAAAMABEAAAAGAAAAAAAMABIAAAAGAAAAAAAMABMAAAAGAAAAAAAMABQAAAAGAAAAAAAMABUAAAAGAAAAAAANAAAAAAAFAAIAAAANAAEAAAAGAAAAAAANAAIAAAAGAAAAAAANAAMAAAAGAAAAAAANAAQAAAAGAAAAAAANAAUAAAAGAAAAAAANAAYAAAAGAAAAAAANAAcAAAAEAAMAAAANAAgAAAAFAAMAAAANAAkAAAAGAAAAAAANAAoAAAAGAAAAAAANAAsAAAAGAAAAAAANAAwAAAAEAAIAAAANAA0AAAAGAAAAAAANAA4AAAAFAAMAAAANAA8AAAAEAAIAAAANABAAAAAGAAAAAAANABEAAAAGAAAAAAANABIAAAAEAAIAAAANABMAAAAFAAIAAAANABQAAAAFAAMAAAANABUAAAAGAAAAAAAOAAAAAAAGAAAAAAAOAAEAAAAFAAMAAAAOAAIAAAAGAAAAAAAOAAMAAAAGAAAAAAAOAAQAAAAFAAMAAAAOAAUAAAAFAAIAAAAOAAYAAAAGAAAAAAAOAAcAAAAGAAAAAAAOAAgAAAAGAAAAAAAOAAkAAAAGAAAAAAAOAAoAAAAGAAAAAAAOAAsAAAAFAAIAAAAOAAwAAAAGAAAAAAAOAA0AAAAGAAAAAAAOAA4AAAAEAAIAAAAOAA8AAAAGAAAAAAAOABAAAAAGAAAAAAAOABEAAAAGAAAAAAAOABIAAAAGAAAAAAAOABMAAAAGAAAAAAAOABQAAAAGAAAAAAAOABUAAAAEAAMAAAAPAAAAAAAGAAAAAAAPAAEAAAAGAAAAAAAPAAIAAAAEAAIAAAAPAAMAAAAGAAAAAAAPAAQAAAAGAAAAAAAPAAUAAAAFAAMAAAAPAAYAAAAGAAAAAAAPAAcAAAAGAAAAAAAPAAgAAAAGAAAAAAAPAAkAAAAGAAAAAAAPAAoAAAAGAAAAAAAPAAsAAAAGAAAAAAAPAAwAAAAGAAAAAAAPAA0AAAAEAAIAAAAPAA4AAAAGAAAAAAAPAA8AAAAGAAAAAAAPABAAAAAFAAIAAAAPABEAAAAGAAAAAAAPABIAAAAGAAAAAAAPABMAAAAEAAMAAAAPABQAAAAGAAAAAAAPABUAAAAGAAAAAAAQAAAAAAAGAAAAAAAQAAEAAAAGAAAAAAAQAAIAAAAGAAAAAAAQAAMAAAAGAAAAAAAQAAQAAAAFAAMAAAAQAAUAAAAGAAAAAAAQAAYAAAAGAAAAAAAQAAcAAAAFAAIAAAAQAAgAAAAGAAAAAAAQAAkAAAAEAAIAAAAQAAoAAAAGAAAAAAAQAAsAAAAGAAAAAAAQAAwAAAAGAAAAAAAQAA0AAAAGAAAAAAAQAA4AAAAGAAAAAAAQAA8AAAAFAAMAAAAQABAAAAAGAAAAAAAQABEAAAAFAAMAAAAQABIAAAAGAAAAAAAQABMAAAAGAAAAAAAQABQAAAAGAAAAAAAQABUAAAAGAAAAAAARAAAAAAAGAAAAAAARAAEAAAAGAAAAAAARAAIAAAAGAAAAAAARAAMAAAAGAAAAAAARAAQAAAAFAAIAAAARAAUAAAAGAAAAAAARAAYAAAAGAAAAAAARAAcAAAAFAAMAAAARAAgAAAAGAAAAAAARAAkAAAAEAAIAAAARAAoAAAAGAAAAAAARAAsAAAAGAAAAAAARAAwAAAAFAAMAAAARAA0AAAAFAAIAAAARAA4AAAAGAAAAAAARAA8AAAAGAAAAAAARABAAAAAEAAMAAAARABEAAAAFAAIAAAARABIAAAAGAAAAAAARABMAAAAGAAAAAAARABQAAAAEAAMAAAARABUAAAAFAAMAAAASAAAAAAAFAAMAAAASAAEAAAAEAAIAAAASAAIAAAAGAAAAAAASAAMAAAAGAAAAAAASAAQAAAAEAAIAAAASAAUAAAAGAAAAAAASAAYAAAAGAAAAAAASAAcAAAAGAAAAAAASAAgAAAAGAAAAAAASAAkAAAAGAAAAAAASAAoAAAAGAAAAAAASAAsAAAAGAAAAAAASAAwAAAAFAAIAAAASAA0AAAAGAAAAAAASAA4AAAAGAAAAAAASAA8AAAAGAAAAAAASABAAAAAGAAAAAAASABEAAAAGAAAAAAASABIAAAAGAAAAAAASABMAAAAGAAAAAAASABQAAAAEAAMAAAASABUAAAAFAAIAAAATAAAAAAAGAAAAAAATAAEAAAAGAAAAAAATAAIAAAAGAAAAAAATAAMAAAAGAAAAAAATAAQAAAAGAAAAAAATAAUAAAAEAAIAAAATAAYAAAAGAAAAAAATAAcAAAAGAAAAAAATAAgAAAAGAAAAAAATAAkAAAAGAAAAAAATAAoAAAAGAAAAAAATAAsAAAAGAAAAAAATAAwAAAAGAAAAAAATAA0AAAAGAAAAAAATAA4AAAAGAAAAAAATAA8AAAAGAAAAAAATABAAAAAGAAAAAAATABEAAAAGAAAAAAATABIAAAAGAAAAAAATABMAAAAGAAAAAAATABQAAAAFAAMAAAATABUAAAAGAAAAAAAUAAAAAAAGAAAAAAAUAAEAAAAGAAAAAAAUAAIAAAAFAAIAAAAUAAMAAAAGAAAAAAAUAAQAAAAGAAAAAAAUAAUAAAAEAAMAAAAUAAYAAAAGAAAAAAAUAAcAAAAGAAAAAAAUAAgAAAAFAAMAAAAUAAkAAAAGAAAAAAAUAAoAAAAEAAMAAAAUAAsAAAAGAAAAAAAUAAwAAAAGAAAAAAAUAA0AAAAFAAMAAAAUAA4AAAAGAAAAAAAUAA8AAAAEAAIAAAAUABAAAAAEAAMAAAAUABEAAAAGAAAAAAAUABIAAAAEAAIAAAAUABMAAAAGAAAAAAAUABQAAAAGAAAAAAAUABUAAAAGAAAAAAAVAAAAAAAGAAAAAAAVAAEAAAAGAAAAAAAVAAIAAAAGAAAAAAAVAAMAAAAGAAAAAAAVAAQAAAAGAAAAAAAVAAUAAAAGAAAAAAAVAAYAAAAGAAAAAAAVAAcAAAAGAAAAAAAVAAgAAAAEAAIAAAAVAAkAAAAGAAAAAAAVAAoAAAAGAAAAAAAVAAsAAAAGAAAAAAAVAAwAAAAGAAAAAAAVAA0AAAAGAAAAAAAVAA4AAAAGAAAAAAAVAA8AAAAGAAAAAAAVABAAAAAFAAMAAAAVABEAAAAGAAAAAAAVABIAAAAFAAIAAAAVABMAAAAFAAMAAAAVABQAAAAGAAAAAAAVABUAAAAGAAAAAAAWAAAAAAAFAAMAAAAWAAEAAAAGAAAAAAAWAAIAAAAEAAMAAAAWAAMAAAAGAAAAAAAWAAQAAAAEAAIAAAAWAAUAAAAGAAAAAAAWAAYAAAAEAAIAAAAWAAcAAAAEAAIAAAAWAAgAAAAGAAAAAAAWAAkAAAAGAAAAAAAWAAoAAAAGAAAAAAAWAAsAAAAGAAAAAAAWAAwAAAAGAAAAAAAWAA0AAAAGAAAAAAAWAA4AAAAGAAAAAAAWAA8AAAAGAAAAAAAWABAAAAAGAAAAAAAWABEAAAAGAAAAAAAWABIAAAAGAAAAAAAWABMAAAAGAAAAAAAWABQAAAAGAAAAAAAWABUAAAAEAAIAAAAXAAAAAAAGAAAAAAAXAAEAAAAGAAAAAAAXAAIAAAAGAAAAAAAXAAMAAAAGAAAAAAAXAAQAAAAGAAAAAAAXAAUAAAAGAAAAAAAXAAYAAAAGAAAAAAAXAAcAAAAGAAAAAAAXAAgAAAAFAAIAAAAXAAkAAAAFAAIAAAAXAAoAAAAGAAAAAAAXAAsAAAAGAAAAAAAXAAwAAAAGAAAAAAAXAA0AAAAGAAAAAAAXAA4AAAAGAAAAAAAXAA8AAAAGAAAAAAAXABAAAAAGAAAAAAAXABEAAAAGAAAAAAAXABIAAAAFAAMAAAAXABMAAAAGAAAAAAAXABQAAAAEAAMAAAAXABUAAAAFAAIAAAAYAAAAAAAGAAAAAAAYAAEAAAAGAAAAAAAYAAIAAAAGAAAAAAAYAAMAAAAEAAIAAAAYAAQAAAAGAAAAAAAYAAUAAAAGAAAAAAAYAAYAAAAEAAIAAAAYAAcAAAAGAAAAAAAYAAgAAAAGAAAAAAAYAAkAAAAGAAAAAAAYAAoAAAAGAAAAAAAYAAsAAAAGAAAAAAAYAAwAAAAGAAAAAAAYAA0AAAAGAAAAAAAYAA4AAAAGAAAAAAAYAA8AAAAGAAAAAAAYABAAAAAGAAAAAAAYABEAAAAEAAIAAAAYABIAAAAGAAAAAAAYABMAAAAGAAAAAAAYABQAAAAGAAAAAAAYABUAAAAGAAAAAAAZAAAAAAAGAAAAAAAZAAEAAAAGAAAAAAAZAAIAAAAFAAIAAAAZAAMAAAAGAAAAAAAZAAQAAAAGAAAAAAAZAAUAAAAFAAIAAAAZAAYAAAAGAAAAAAAZAAcAAAAGAAAAAAAZAAgAAAAGAAAAAAAZAAkAAAAGAAAAAAAZAAoAAAAFAAMAAAAZAAsAAAAGAAAAAAAZAAwAAAAGAAAAAAAZAA0AAAAFAAMAAAAZAA4AAAAGAAAAAAAZAA8AAAAGAAAAAAAZABAAAAAGAAAAAAAZABEAAAAEAAIAAAAZABIAAAAEAAMAAAAZABMAAAAGAAAAAAAZABQAAAAGAAAAAAAZABUAAAAGAAAAAAAaAAAAAAAGAAAAAAAaAAEAAAAGAAAAAAAaAAIAAAAGAAAAAAAaAAMAAAAFAAIAAAAaAAQAAAAGAAAAAAAaAAUAAAAGAAAAAAAaAAYAAAAGAAAAAAAaAAcAAAAGAAAAAAAaAAgAAAAGAAAAAAAaAAkAAAAFAAMAAAAaAAoAAAAGAAAAAAAaAAsAAAAGAAAAAAAaAAwAAAAFAAIAAAAaAA0AAAAEAAMAAAAaAA4AAAAGAAAAAAAaAA8AAAAGAAAAAAAaABAAAAAGAAAAAAAaABEAAAAGAAAAAAAaABIAAAAGAAAAAAAaABMAAAAEAAIAAAAaABQAAAAGAAAAAAAaABUAAAAGAAAAAAAbAAAAAAAFAAIAAAAbAAEAAAAGAAAAAAAbAAIAAAAGAAAAAAAbAAMAAAAGAAAAAAAbAAQAAAAGAAAAAAAbAAUAAAAGAAAAAAAbAAYAAAAGAAAAAAAbAAcAAAAGAAAAAAAbAAgAAAAGAAAAAAAbAAkAAAAEAAMAAAAbAAoAAAAEAAMAAAAbAAsAAAAGAAAAAAAbAAwAAAAGAAAAAAAbAA0AAAAGAAAAAAAbAA4AAAAGAAAAAAAbAA8AAAAGAAAAAAAbABAAAAAFAAIAAAAbABEAAAAEAAIAAAAbABIAAAAGAAAAAAAbABMAAAAGAAAAAAAbABQAAAAGAAAAAAAbABUAAAAGAAAAAAAcAAAAAAAGAAAAAAAcAAEAAAAGAAAAAAAcAAIAAAAGAAAAAAAcAAMAAAAGAAAAAAAcAAQAAAAGAAAAAAAcAAUAAAAGAAAAAAAcAAYAAAAEAAIAAAAcAAcAAAAGAAAAAAAcAAgAAAAGAAAAAAAcAAkAAAAGAAAAAAAcAAoAAAAGAAAAAAAcAAsAAAAGAAAAAAAcAAwAAAAFAAIAAAAcAA0AAAAGAAAAAAAcAA4AAAAGAAAAAAAcAA8AAAAGAAAAAAAcABAAAAAGAAAAAAAcABEAAAAGAAAAAAAcABIAAAAEAAMAAAAcABMAAAAGAAAAAAAcABQAAAAFAAMAAAAcABUAAAAGAAAAAAAdAAAAAAAGAAAAAAAdAAEAAAAGAAAAAAAdAAIAAAAGAAAAAAAdAAMAAAAGAAAAAAAdAAQAAAAGAAAAAAAdAAUAAAAGAAAAAAAdAAYAAAAGAAAAAAAdAAcAAAAFAAMAAAAdAAgAAAAGAAAAAAAdAAkAAAAGAAAAAAAdAAoAAAAGAAAAAAAdAAsAAAAEAAMAAAAdAAwAAAAGAAAAAAAdAA0AAAAGAAAAAAAdAA4AAAAGAAAAAAAdAA8AAAAGAAAAAAAdABAAAAAGAAAAAAAdABEAAAAFAAMAAAAdABIAAAAFAAMAAAAdABMAAAAGAAAAAAAdABQAAAAFAAMAAAAdABUAAAAGAAAAAAAeAAAAAAAEAAMAAAAeAAEAAAAGAAAAAAAeAAIAAAAFAAMAAAAeAAMAAAAGAAAAAAAeAAQAAAAGAAAAAAAeAAUAAAAGAAAAAAAeAAYAAAAEAAIAAAAeAAcAAAAGAAAAAAAeAAgAAAAFAAMAAAAeAAkAAAAGAAAAAAAeAAoAAAAGAAAAAAAeAAsAAAAGAAAAAAAeAAwAAAAGAAAAAAAeAA0AAAAGAAAAAAAeAA4AAAAGAAAAAAAeAA8AAAAFAAMAAAAeABAAAAAGAAAAAAAeABEAAAAGAAAAAAAeABIAAAAGAAAAAAAeABMAAAAGAAAAAAAeABQAAAAGAAAAAAAeABUAAAAGAAAAAAAfAAAAAAAGAAAAAAAfAAEAAAAGAAAAAAAfAAIAAAAGAAAAAAAfAAMAAAAGAAAAAAAfAAQAAAAGAAAAAAAfAAUAAAAGAAAAAAAfAAYAAAAGAAAAAAAfAAcAAAAGAAAAAAAfAAgAAAAFAAIAAAAfAAkAAAAGAAAAAAAfAAoAAAAGAAAAAAAfAAsAAAAGAAAAAAAfAAwAAAAFAAMAAAAfAA0AAAAGAAAAAAAfAA4AAAAGAAAAAAAfAA8AAAAGAAAAAAAfABAAAAAGAAAAAAAfABEAAAAGAAAAAAAfABIAAAAGAAAAAAAfABMAAAAGAAAAAAAfABQAAAAFAAMAAAAfABUAAAAGAAAAAAAgAAAAAAAGAAAAAAAgAAEAAAAGAAAAAAAgAAIAAAAEAAMAAAAgAAMAAAAGAAAAAAAgAAQAAAAGAAAAAAAgAAUAAAAGAAAAAAAgAAYAAAAGAAAAAAAgAAcAAAAGAAAAAAAgAAgAAAAGAAAAAAAgAAkAAAAGAAAAAAAgAAoAAAAFAAIAAAAgAAsAAAAFAAMAAAAgAAwAAAAGAAAAAAAgAA0AAAAGAAAAAAAgAA4AAAAGAAAAAAAgAA8AAAAGAAAAAAAgABAAAAAGAAAAAAAgABEAAAAEAAMAAAAgABIAAAAGAAAAAAAgABMAAAAFAAMAAAAgABQAAAAGAAAAAAAgABUAAAAGAAAAAAAhAAAAAAAEAAMAAAAhAAEAAAAFAAMAAAAhAAIAAAAGAAAAAAAhAAMAAAAGAAAAAAAhAAQAAAAGAAAAAAAhAAUAAAAFAAMAAAAhAAYAAAAGAAAAAAAhAAcAAAAGAAAAAAAhAAgAAAAGAAAAAAAhAAkAAAAGAAAAAAAhAAoAAAAFAAIAAAAhAAsAAAAGAAAAAAAhAAwAAAAFAAIAAAAhAA0AAAAFAAMAAAAhAA4AAAAGAAAAAAAhAA8AAAAGAAAAAAAhABAAAAAGAAAAAAAhABEAAAAFAAIAAAAhABIAAAAGAAAAAAAhABMAAAAGAAAAAAAhABQAAAAGAAAAAAAhABUAAAAGAAAAAAAiAAAAAAAGAAAAAAAiAAEAAAAFAAMAAAAiAAIAAAAGAAAAAAAiAAMAAAAEAAMAAAAiAAQAAAAGAAAAAAAiAAUAAAAGAAAAAAAiAAYAAAAGAAAAAAAiAAcAAAAFAAMAAAAiAAgAAAAGAAAAAAAiAAkAAAAGAAAAAAAiAAoAAAAGAAAAAAAiAAsAAAAGAAAAAAAiAAwAAAAGAAAAAAAiAA0AAAAEAAMAAAAiAA4AAAAGAAAAAAAiAA8AAAAEAAIAAAAiABAAAAAGAAAAAAAiABEAAAAGAAAAAAAiABIAAAAGAAAAAAAiABMAAAAGAAAAAAAiABQAAAAFAAIAAAAiABUAAAAEAAMAAAAjAAAAAAAGAAAAAAAjAAEAAAAGAAAAAAAjAAIAAAAGAAAAAAAjAAMAAAAEAAMAAAAjAAQAAAAGAAAAAAAjAAUAAAAGAAAAAAAjAAYAAAAGAAAAAAAjAAcAAAAGAAAAAAAjAAgAAAAGAAAAAAAjAAkAAAAGAAAAAAAjAAoAAAAGAAAAAAAjAAsAAAAEAAIAAAAjAAwAAAAGAAAAAAAjAA0AAAAFAAMAAAAjAA4AAAAGAAAAAAAjAA8AAAAGAAAAAAAjABAAAAAGAAAAAAAjABEAAAAFAAIAAAAjABIAAAAGAAAAAAAjABMAAAAEAAIAAAAjABQAAAAGAAAAAAAjABUAAAAGAAAAAAAkAAAAAAAGAAAAAAAkAAEAAAAGAAAAAAAkAAIAAAAGAAAAAAAkAAMAAAAGAAAAAAAkAAQAAAAGAAAAAAAkAAUAAAAGAAAAAAAkAAYAAAAGAAAAAAAkAAcAAAAGAAAAAAAkAAgAAAAGAAAAAAAkAAkAAAAGAAAAAAAkAAoAAAAGAAAAAAAkAAsAAAAFAAMAAAAkAAwAAAAFAAMAAAAkAA0AAAAGAAAAAAAkAA4AAAAGAAAAAAAkAA8AAAAGAAAAAAAkABAAAAAEAAMAAAAkABEAAAAGAAAAAAAkABIAAAAFAAMAAAAkABMAAAAGAAAAAAAkABQAAAAGAAAAAAAkABUAAAAGAAAAAAAlAAAAAAAEAAMAAAAlAAEAAAAEAAMAAAAlAAIAAAAEAAIAAAAlAAMAAAAGAAAAAAAlAAQAAAAGAAAAAAAlAAUAAAAGAAAAAAAlAAYAAAAFAAMAAAAlAAcAAAAGAAAAAAAlAAgAAAAEAAIAAAAlAAkAAAAGAAAAAAAlAAoAAAAGAAAAAAAlAAsAAAAGAAAAAAAlAAwAAAAGAAAAAAAlAA0AAAAGAAAAAAAlAA4AAAAFAAIAAAAlAA8AAAAGAAAAAAAlABAAAAAEAAIAAAAlABEAAAAGAAAAAAAlABIAAAAGAAAAAAAlABMAAAAFAAIAAAAlABQAAAAGAAAAAAAlABUAAAAGAAAAAAA=")
tile_set = SubResource("TileSet_7e3sg")

[node name="Tile" type="Node2D" parent="."]
scale = Vector2(3, 3)

[node name="roomSize" type="Marker2D" parent="."]
position = Vector2(1792, 1024)

[node name="marker_from_forest" type="Marker2D" parent="."]
position = Vector2(192, 320)

[node name="marker_from_mountain" type="Marker2D" parent="."]
position = Vector2(921, 114)

[node name="EnterForest" type="Area2D" parent="."]
position = Vector2(0, 320)

[node name="ColorRect" type="ColorRect" parent="EnterForest"]
offset_top = -32.0
offset_right = 64.0
offset_bottom = 32.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnterForest"]
position = Vector2(32, 0)
shape = SubResource("RectangleShape2D_l51ex")

[node name="EnterMountain" type="Area2D" parent="."]
position = Vector2(876, 35)

[node name="ColorRect" type="ColorRect" parent="EnterMountain"]
offset_top = -32.0
offset_right = 64.0
offset_bottom = 32.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnterMountain"]
position = Vector2(32, 0)
shape = SubResource("RectangleShape2D_vlrda")

[connection signal="area_entered" from="EnterForest" to="." method="_on_enter_forest_area_entered"]
[connection signal="area_entered" from="EnterMountain" to="." method="_on_enter_mountain_area_entered"]
